@@ -10,6 +10,8 @@
 <p><textarea name="whatabout">{{ .User.About }}</textarea>
 <p><label class="button" for="skinny">skinny layout:</label>
 <input tabindex=1 type="checkbox" id="skinny" name="skinny" value="skinny" {{ if .User.Options.SkinnyCSS }}checked{{ end }}><span></span>
+<p><label class="button" for="maps">apple map links:</label>
+<input tabindex=1 type="checkbox" id="maps" name="maps" value="apple" {{ if eq "apple" .User.Options.MapLink }}checked{{ end }}><span></span>
 <p><button>update settings</button>
 </form>
 </div>
